Fix boss box alignment and mobile

--- a/app/sass/_level-select.scss
+++ b/app/sass/_level-select.scss
@@ -3,6 +3,11 @@
 		font-size: 1em;
 		margin-top:4em;
 	}
+
+	#boss-row {
+		margin-top: -30px;
+		padding-top: 0;
+	}
 }
 
 #region-header{
@@ -33,7 +38,7 @@
 }
 
 #level-num {
-	position:absolute; 
+	position:absolute;
 	font-size:2em;
 	top: 50%;
     left: 50%;
